[package]
name = "duple"
authors = ["micouy <m.powierza@tutanota.com>"]
description = "proof of concept library with methods generic over the tuple length"
repository = "https://github.com/micouy/duple"
version = "0.0.1"
edition = "2018"
license = "GPL-3.0"
include = [
	"src/",
	"Cargo.toml",
	"README.md",
]
categories = ["rust-patterns"]
keywords = ["tuple", "tuples"]

[dependencies]
